Contact sectoin icons adjust

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h5 class="display—5 fw-bold mb-4"
                 style="padding-top: 100px; padding-bottom: 50px; text-align: center; font-size: 40px;">Contact Us</h5>
             <div class="row">
-                <div class="col-sm-4 mt-4">
+                <div class="col-sm-4 mt-4" style="display: contents;">
                     <form class="row g-3">
                         <div class="col-md-6">
                             <label for="inputfirstname" class="form-label">Firstname</label>
@@ -177,7 +177,7 @@
                     <a href=""></a>
                 </div>
                 <div class="col-sm-4 mt-4" style="display: flex; justify-content: center; align-items: center;">
-                    <div class="social-media">
+                    <div class="social-media" style="display: contents;">
                         <a href="https://github.com/huzaifasajid26"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/huzaifa-sajid-315760347/"><i
                                 class="fa-brands fa-linkedin"></i></a>
